# OpenXR_Unity_MuJoCo_ROS2_Robotics_Simulator

./: .gitignore  LICENSE  README.md
ros2/docker/: Dockerfile  docker-compose.yml
ros2/ros2_ws/src/panda_kinematics/: CMakeLists.txt  package.xml
ros2/ros2_ws/src/panda_kinematics/include/panda_kinematics/: panda_arm_controller.hpp
ros2/ros2_ws/src/panda_kinematics/include/panda_kinematics/commands/: callback_command.hpp  gripper_command.hpp  kinematics.h  move_home_command.hpp  move_to_pose_command.hpp  robot_command.hpp  wait_command.hpp
ros2/ros2_ws/src/panda_kinematics/msg/: AllJointPos.msg  JointCommand.msg
ros2/ros2_ws/src/panda_kinematics/src/: kinematics.cpp  kinematics.h  main.cpp  panda_arm_controller.cpp
ros2/ros2_ws/src/panda_kinematics/src/commands/: callback_command.cpp  gripper_command.cpp  move_home_command.cpp  move_to_pose_command.cpp  wait_command.cpp
unity/AR Robot Control/: .gitignore  AR Robot Control.slnx  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  MUJOCO_LOG.TXT  Mujoco.Editor.csproj  Mujoco.Runtime.csproj
unity/AR Robot Control/Assets/: msgbrowser_settings.asset
unity/AR Robot Control/Assets/Material/: Black.mat  Green.mat  Light Blue.mat  White.mat  defaultMat.mat
unity/AR Robot Control/Assets/Oculus/: OculusProjectConfig.asset
unity/AR Robot Control/Assets/Prefab/: Pos Maker.prefab
unity/AR Robot Control/Assets/Resources/: OculusRuntimeSettings.asset  ROSConnectionPrefab.prefab
unity/AR Robot Control/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+56 files in other folders)
